deployment-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: python-docker-k8s-backend
  name: python-docker-k8s-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-docker-k8s-backend
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: python-docker-k8s-backend
    spec:
      containers:
      - image: parimalppatil/python-docker-k8s-backend
        imagePullPolicy: Never
        name: python-docker-k8s-backend
        ports:
        - containerPort: 4242
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: python-docker-k8s-backend
  name: python-docker-k8s-backend
  namespace: default
spec:
  ports:
  - port: 4242 # service port
    protocol: TCP
    targetPort: 4242 # container port
  selector:
    app: python-docker-k8s-backend
