deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: python-docker-k8s
  name: python-docker-k8s
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-docker-k8s
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: python-docker-k8s
    spec:
      containers:
      - image: parimalppatil/python-docker-k8s
        imagePullPolicy: Never
        name: python-docker-k8s
        ports:
        - containerPort: 4141
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: python-docker-k8s
  name: python-docker-k8s
  namespace: default
spec:
  ports:
  - port: 4141 # service port
    protocol: TCP
    targetPort: 4141 # container port
  selector:
    app: python-docker-k8s
