nodeport_service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: python-docker-k8s
  name: node-port
spec:
  type: NodePort
  ports:
    - port: 4141
      targetPort: 4141
      nodePort: 32020
  selector:
    app: python-docker-k8s
