service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: python-docker-k8s
  name: python-docker-k8s
  namespace: default
spec:
  ports:
  - port: 4141
    protocol: TCP
    targetPort: 4141
  selector:
    app: python-docker-k8s
  type: LoadBalancer
