ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-docker-k8s
  annotations:
    kubernetes.io/ingress.class: "nginx"  
  labels:
    name: python-docker-k8s
spec:
  rules:
  - host: ingress-example.com
    http:
      paths:
      - path: /firstService
        pathType: Prefix
        backend:
          service:
            name: python-docker-k8s
            port:
              number: 4141
